gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test16284.d
version https://git-lfs.github.com/spec/v1
oid sha256:2493dec0e717c0f49cda85569df21164b8e56dff1d91f22ee54ea62e74285391
size 563
